--- a/yy/yycms.admin/Web.Release.config
+++ b/yy/yycms.admin/Web.Release.config
@@ -3,7 +3,7 @@
 <!-- 有关使用 Web.config 转换的详细信息，请访问 http://go.microsoft.com/fwlink/?LinkId=301874 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
+	<!--
     在下例中，“SetAttributes”转换将更改
     “connectionString”的值，仅在“Match”定位器找到值为“MyDB”的
     特性“name”时使用“ReleaseSQLServer”。
@@ -14,20 +14,19 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
-  <connectionStrings>
-    <add name="DBConnection"
-      connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=yyCms;persist security info=True;user id=sa;password=Wz6288778;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-  </connectionStrings>
+	<connectionStrings>
+		<add name="DBConnection" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql12;initial catalog=yyCms;persist security info=True;user id=saa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
-  <appSettings>
-    <add key="SkinBaseDirectory" value="D:\www\yycms.v3\skin\" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-  </appSettings>
-  
-  
-  <system.web>
-    <compilation xdt:Transform="RemoveAttributes(debug)" />
-    <!--
+	</connectionStrings>
+
+	<appSettings>
+		<add key="SkinBaseDirectory" value="D:\www\yycms.v3\skin\" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+	</appSettings>
+
+
+	<system.web>
+		<compilation xdt:Transform="RemoveAttributes(debug)" />
+		<!--
       在以下示例中，"Replace" 转换将替换 Web.config 文件的
       整个 <customErrors> 节。
       请注意，由于在 <system.web> 节点下只有一个
@@ -38,5 +37,5 @@
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
     -->
-  </system.web>
+	</system.web>
 </configuration>
