--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,9 @@
 /yy/src/yycms.union/bin/Debug
 /yy/src/yycms.service/obj/Debug
 /yy/src/yycms.union/obj/Debug
+/yy/src/yycms.entity/bin/Release
+/yy/src/yycms.entity/obj/Release
+/yy/src/yycms.service/obj/Release
+/yy/src/yycms.union/bin/Release
+/yy/src/yycms.admin/obj/Release
+/yy/src/yycms.union/obj/Release
