--- a/yy/src/yycms.admin/packages.config
+++ b/yy/src/yycms.admin/packages.config
@@ -7,6 +7,7 @@
   <package id="EntityFramework.zh-Hans" version="6.1.3" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
   <package id="jQuery" version="2.1.4" targetFramework="net45" />
+  <package id="lodash" version="4.17.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.zh-Hans" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
