upgrade lib of angularjs

--- a/yy/src/yycms.admin/yycms.admin.csproj
+++ b/yy/src/yycms.admin/yycms.admin.csproj
@@ -332,9 +332,11 @@
     <Content Include="Images\users.jpg" />
     <Content Include="Scripts\angular-cookies.min.js" />
     <Content Include="Scripts\angular-messages.min.js" />
+    <Content Include="Scripts\angular-mocks.js" />
     <Content Include="Scripts\angular-resource.min.js" />
     <Content Include="Scripts\angular-route.min.js" />
     <Content Include="Scripts\angular-sanitize.min.js" />
+    <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\api.js" />
     <Content Include="Scripts\app.js" />
